# markovify-playground

./: .editorconfig  .gitignore  pyproject.toml
src/: main.py
